--- a/src/app/components/estadocuenta/estadocuenta.component.html
+++ b/src/app/components/estadocuenta/estadocuenta.component.html
@@ -1,10 +1,24 @@
 
- 
+         <div class="container">
+          <p>
+            <button
+              type="button"
+              class="btnFonelliAzul btn"
+              (click)="collapse.toggle()"
+              [attr.aria-expanded]="!isCollapsed"
+              aria-controls="collapseExample"
+            >
+              Filtros
+            </button>
+          </p>
+        </div>
       <section >
+
         <div class="container float-left">
         <div class="row">
           <div class="col-12">
-  
+
+            <div #collapse="ngbCollapse" class="container" [(ngbCollapse)]="isCollapsed">
             <div class="card">
               <div class="card-body">
                 <h2 class="card-title" >Estado de cuenta</h2>
@@ -130,10 +144,13 @@
                 </form><!-- End General Form Elements --> 
               </div> 
             </div>
+</div>
+
+
           </div>
         </div>
 
-        <div *ngIf="bBandera" class="table-responsive container">
+        <div *ngIf="bBandera" class="container">
           <br>
           <div class="form-row">
             <!-- <div class="form-group col-md-1">              
@@ -154,8 +171,8 @@
                 </div> 
           </div>
     
-        <div class="contenedor-tabla table-responsive" id="pdfTable" #pdfTable>
-          <table class="table table-hover table-striped  ">
+        <div class="container" id="pdfTable" #pdfTable>
+          <table class="table table-hover table-striped  " datatable [dtOptions]="dtOptions" >
             <thead>
               <tr class="EncTabla">
                 <th style="background-color: #24a4cc; color: white;">OF</th><!--Codigo oficina -->
@@ -177,16 +194,23 @@
               <ng-container *ngFor="let cliente of oCliente | searchestadocuenta: searchtext">
                 <tr class="table-info">
                   <td  class="FilasFonelli" colspan="13">{{'('+cliente.ClienteCodigo+' '+cliente.ClienteFilial+ ') ' +cliente.ClienteNombre+ '-' +cliente.Sucursal}}</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 </tr>
               <ng-container *ngFor="let cartera of cliente.TipoCartera;">
-               <!-- <tr>
-                  <td></td>
-                  <td>{{cartera.TipoCarteraCodigo}}</td>
-                  <td>{{cartera.TipoCarteraDescripc}}</td>
-                  <td></td>
-                </tr> -->
+             
                 <tr *ngFor="let movimento of cartera.Movimientos; let idx3 = index">
-                  <!-- <td>{{idx1 + '-' + idx2 + '-' + idx3 }}</td> -->
+             
                   <td class="FilasFonelli">{{movimento.OficinaFonelliCodigo}}</td>
                   <td class="FilasFonelli">{{cartera.TipoCarteraCodigo}}</td>
                   <td class="FilasFonelli">{{movimento.DocumentoSerie}}</td>
