--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -1,8 +1,14 @@
-<section >
-  <div class="container float-left">
-  <div class="row">
-     <div class="col-lg-12">
 
+  <div class="container">
+    <p>
+    <button type="button" class="btnFonelliAzul btn" (click)="collapse.toggle()" [attr.aria-expanded]="!isCollapsed"
+      aria-controls="collapseExample">
+    Filtros
+    </button>
+  </p>
+  </div>
+
+  <div #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
        <div class="card">
          <div class="card-body">
            <h2 class="card-title" >Relación de Pedidos</h2>
@@ -357,11 +363,10 @@
 
          </div>
        </div>
-     </div>
-   </div>
 
-  </div>
+      </div>
 
+      
    <div *ngIf="bBandera" class="table-responsive">
     <br>
       <div class="form-row">
@@ -388,7 +393,7 @@
    <div  class="contenedor-tabla" id="pdfTable" #pdfTable  > 
 
     <!-- <div  class="contenedor-tabla"> -->
-      <table class="table table-hover table-striped" [style.height.px]="sHeight" >
+      <table class="table table-hover table-striped" datatable [dtOptions]="dtOptions"  >
         <!-- <table class="table table-hover table-striped "  style="position:sticky;" > -->
           <thead >
            <tr class="EncTabla" > 
@@ -422,9 +427,9 @@
               <tr class="table-info">
                 <!-- <td *ngIf="!bCliente" ? colspan="14" :colspan="18">{{relPed.OficinaFonelliNombre}}</td> -->
                 <td class="sticky" colspan="4">{{relPed.OficinaFonelliNombre}}</td> 
-                <!-- <td *ngIf="!bCliente"></td> 
+                 <td></td> 
                 <td ></td> 
-                <td ></td> --> 
+                <td ></td>  
                 <td ></td> 
                 <td ></td> 
                 <td *ngIf="!bCliente"></td> 
@@ -574,7 +579,6 @@
   </div> 
 </div> 
 
-</section>
 
 
 <!--Modal pedidos detalle-->
