--- a/src/app/components/reporteventas/reporteventas.component.html
+++ b/src/app/components/reporteventas/reporteventas.component.html
@@ -1,9 +1,23 @@
-     
+<div class="container">
+  <p>
+    <button
+      type="button"
+      class="btnFonelliAzul btn"
+      (click)="collapse.toggle()"
+      [attr.aria-expanded]="!isCollapsed"
+      aria-controls="collapseExample"
+    >
+      Filtros
+    </button>
+  </p>
+</div>
+
       <section >
         <div class="container float-left">
         <div class="row">
           <div class="col-lg-12">
   
+            <div #collapse="ngbCollapse" class="container" [(ngbCollapse)]="isCollapsed">
             <div class="card">
               <div class="card-body">
                 <h2 class="card-title">Reporte de ventas</h2>
@@ -474,11 +488,14 @@
                 </form><!-- End General Form Elements --> 
               </div> 
             </div>
+            </div>
+
+
           </div>
         </div>
       </div>
 
-          <div *ngIf="bBandera" class="table-responsive container">
+          <div *ngIf="bBandera" >
             <br>
             <div class="form-row">
               <!-- <div class="form-group col-md-1">              
@@ -500,24 +517,42 @@
             </div>
 
         <!-- <div *ngIf="bFiltroOrden"  id="pdfTable" #pdfTable> -->
-        <div  class="contenedor-tabla"  id="pdfTable" #pdfTable>
-          <table *ngIf="oBuscar.DesglosaCategoria == 'S' && oBuscar.DesglosaCliente =='S'" class="table table-hover table-striped"> 
+        <div  class=""  id="pdfTable" #pdfTable>
+          <table *ngIf="oBuscar.DesglosaCategoria == 'S' && oBuscar.DesglosaCliente =='S'" class="table table-hover table-striped" datatable [dtOptions]="dtOptions"> 
             <!-- <table class="table table-bordered" > -->
               <thead>
                 <tr class="EncTabla">                 
                   <th class="table-success" scope="col"></th>
                   <th class="table-success" scope="col"></th>
-                  <th class="table-warning" scope="col" colspan="6" style="text-align:center;"> 1er Periodo</th>  
-                  <th class="table-info" scope="col" colspan="6" style="text-align:center;">2do Periodo</th>
+                  <th class="table-warning" scope="col"  style="text-align:center;"> 1er Periodo</th>  
+                  <th class="table-info" scope="col" style="text-align:center;">2do Periodo</th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
                 </tr>
 
                 <tr class="EncTabla">                 
                   <th class="table-success" scope="col"></th>
                   <th class="table-success" scope="col"></th>
-                  <th class="table-warning" scope="col" colspan="3" style="text-align:center;"> desde {{oBuscar.Fecha1Desde}}</th>  
-                  <th class="table-warning" scope="col" colspan="3" style="text-align:center;">hasta {{oBuscar.Fecha1Hasta}} </th>
-                  <th class="table-info" scope="col" colspan="3" style="text-align:center;"> desde {{oBuscar.Fecha2Desde}}</th>  
-                  <th class="table-info" scope="col" colspan="3" style="text-align:center;">hasta {{oBuscar.Fecha2Hasta}} </th>
+                  <th class="table-warning" scope="col"  style="text-align:center;"> desde {{oBuscar.Fecha1Desde}}</th>  
+                  <th class="table-warning" scope="col"  style="text-align:center;">hasta {{oBuscar.Fecha1Hasta}} </th>
+                  <th class="table-info" scope="col"  style="text-align:center;"> desde {{oBuscar.Fecha2Desde}}</th>  
+                  <th class="table-info" scope="col"  style="text-align:center;">hasta {{oBuscar.Fecha2Hasta}} </th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
+                  <th></th>
                 </tr>
 
                 <tr   class="EncTabla">                 
@@ -543,11 +578,17 @@
                 <ng-container *ngFor="let cli of oClienteCont">                  
                     <tr  class="EncTabla">
                       <td colspan="8" class="FilasFonelli">{{cli.ClienteCodigo + ' ' + cli.ClienteFilial +' '+ cli.ClienteNombre }}</td>
-                      
                       <td></td>
                       <td></td>
                       <td></td>
                       <td></td> 
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td> 
+                      <td></td>
                       <td></td>
                       <td></td>
                     </tr>
@@ -614,7 +655,7 @@
               </tbody>               
           </table>
 
-          <table *ngIf="oBuscar.DesglosaCategoria == 'N' && oBuscar.DesglosaCliente =='S'" class="table table-hover table-striped"> 
+          <table *ngIf="oBuscar.DesglosaCategoria == 'N' && oBuscar.DesglosaCliente =='S'" class="table table-hover table-striped" datatable [dtOptions]="dtOptions"> 
               <!-- <table class="table table-bordered" > -->
                 <thead>
                   <tr class="EncTabla">                 
@@ -627,8 +668,18 @@
                     <th class="table-success" scope="col"></th>
                     <th class="table-success" scope="col"></th>
                     <th class="table-success" scope="col"></th>
-                    <th class="table-warning" scope="col" colspan="6" style="text-align:center;"> 1er Periodo</th>  
-                    <th class="table-info" scope="col" colspan="6" style="text-align:center;">2do Periodo</th>
+                    <th class="table-warning" scope="col" style="text-align:center;"> 1er Periodo</th>  
+                    <th class="table-info" scope="col" style="text-align:center;">2do Periodo</th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
                   </tr>
   
                   <tr class="EncTabla">                 
@@ -641,10 +692,17 @@
                     <th class="table-success" scope="col"></th>
                     <th class="table-success" scope="col"></th>
                     <th class="table-success" scope="col"></th>
-                    <th class="table-warning" scope="col" colspan="3" style="text-align:center;"> desde {{oBuscar.Fecha1Desde}}</th>  
-                    <th class="table-warning" scope="col" colspan="3" style="text-align:center;">hasta {{oBuscar.Fecha1Hasta}} </th>
-                    <th class="table-info" scope="col" colspan="3" style="text-align:center;"> desde {{oBuscar.Fecha2Desde}}</th>  
-                    <th class="table-info" scope="col" colspan="3" style="text-align:center;">hasta {{oBuscar.Fecha2Hasta}} </th>
+                    <th class="table-warning" scope="col" style="text-align:center;"> desde {{oBuscar.Fecha1Desde}}</th>  
+                    <th class="table-warning" scope="col" style="text-align:center;">hasta {{oBuscar.Fecha1Hasta}} </th>
+                    <th class="table-info" scope="col"  style="text-align:center;"> desde {{oBuscar.Fecha2Desde}}</th>  
+                    <th class="table-info" scope="col"  style="text-align:center;">hasta {{oBuscar.Fecha2Hasta}} </th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
                   </tr>
   
                   <!-- <tr   class="EncTabla">                 
