--- a/src/app/components/ventasarticulo/ventasarticulo.component.html
+++ b/src/app/components/ventasarticulo/ventasarticulo.component.html
@@ -1,9 +1,24 @@
      
-      <section >
+     <div class="container">
+      <p>
+        <button
+          type="button"
+          class="btnFonelliAzul btn"
+          (click)="collapse.toggle()"
+          [attr.aria-expanded]="!isCollapsed"
+          aria-controls="collapseExample"
+        >
+          Filtros
+        </button>
+      </p>
+    </div>
+
+     <section >
         <div class="container float-left">
         <div class="row">
           <div class="col-lg-12">
   
+            <div #collapse="ngbCollapse" class="container" [(ngbCollapse)]="isCollapsed">
             <div class="card">
               <div class="card-body">
                 <h2 class="card-title" >Ventas por artículo</h2>
@@ -360,10 +375,12 @@
               </div> 
             </div>
           </div>
+
+          </div>
         </div>
       </div>
 
-          <div *ngIf="bBandera" class="table-responsive container">
+          <div *ngIf="bBandera" class="container">
             <br>
             <div class="form-row">
               <!-- <div class="form-group col-md-1">              
@@ -384,8 +401,8 @@
                   </div> 
             </div>
 
-        <div class="contenedor-tabla table-responsive" *ngIf="bFiltroOrden"  id="pdfTable" #pdfTable>
-            <table class="table table-hover table-striped  ">
+        <div class="" *ngIf="bFiltroOrden"  id="pdfTable" #pdfTable>
+            <table class="table table-hover table-striped  " datatable [dtOptions]="dtOptions">
               <thead>
                 <tr *ngIf="bFiltrResumido" class="EncTabla">
                   <th style="background-color: #24a4cc; color: white;">LN</th>
@@ -528,8 +545,8 @@
             </table>
         </div> 
 
-        <div class="contenedor-tabla table-responsive" *ngIf="!bFiltroOrden" id="pdfTable" #pdfTable> <!--Piezas o importe-->
-          <table class="table table-hover table-striped  ">
+        <div class="" *ngIf="!bFiltroOrden" id="pdfTable" #pdfTable> <!--Piezas o importe-->
+          <table class="table table-hover table-striped  " datatable [dtOptions]="dtOptions">
             <thead>
               <tr class="EncTabla">
                 <th style="background-color: #24a4cc; color: white;">NUM</th>                
