--- a/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
+++ b/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
@@ -1,9 +1,25 @@
      
+           
+     <div class="container">
+      <p>
+        <button
+          type="button"
+          class="btnFonelliAzul btn"
+          (click)="collapse.toggle()"
+          [attr.aria-expanded]="!isCollapsed"
+          aria-controls="collapseExample"
+        >
+          Filtros
+        </button>
+      </p>
+    </div>
+
       <section >
         <div class="container float-left">
         <div class="row">
           <div class="col-lg-12">
   
+            <div #collapse="ngbCollapse" class="container" [(ngbCollapse)]="isCollapsed">
             <div class="card">
               <div class="card-body">
                 <h2 class="card-title" [hidden]="!bCliente">Ventas por artículo</h2>
@@ -446,11 +462,13 @@
                 </form><!-- End General Form Elements --> 
               </div> 
             </div>
+</div>
+
           </div>
         </div>
       </div>
 
-    <div *ngIf="bBandera" class="table-responsive" >
+    <div *ngIf="bBandera" class="container" >
             <br>
             <div class="form-row">
               <!-- <div class="form-group col-md-1">              
@@ -471,8 +489,8 @@
                   </div> 
             </div>
 
-        <div class="contenedor-tabla table-responsive" *ngIf="bBanderaCat"  id="pdfTable" #pdfTable>
-            <table class="table table-hover table-striped  ">
+        <div class=""  *ngIf="bBanderaCat"  id="pdfTable" #pdfTable>
+            <table class="table table-hover table-striped  " datatable [dtOptions]="dtOptions">
               <thead>
                 <tr *ngIf="oBuscar.Presentacion == 'R'" class="EncTabla">
                   <th style="background-color: #24a4cc; color: white;">LN</th>
@@ -630,8 +648,8 @@
             </table>
         </div> 
 
-        <div class="contenedor-tabla table-responsive" *ngIf="bBanderaPzIm" id="pdfTable" #pdfTable> <!--Piezas o importe-->
-          <table class="table table-hover table-striped  ">
+        <div class="" *ngIf="bBanderaPzIm" id="pdfTable" #pdfTable> <!--Piezas o importe-->
+          <table class="table table-hover table-striped  " datatable [dtOptions]="dtOptions">
             <thead>
               <tr class="EncTabla">
                 <th style="background-color: #24a4cc; color: white;">NUM</th>
