Se corrige formato de tablas

--- a/src/app/components/consultapedidos/consultapedidos.component.html
+++ b/src/app/components/consultapedidos/consultapedidos.component.html
@@ -166,7 +166,7 @@
 
           
 
-      <div class="contenedor-tabla table-responsive" id="pdfTable" #pdfTable>
+      <div class="container" id="pdfTable" #pdfTable>
           <table  class="table table-hover table-striped" >
             <thead>
               <tr class="EncTabla">
@@ -221,8 +221,7 @@
       </div> 
       <!-- </div>  -->
     
-  </section>
-
+  
 
 
     <!--Modal pedidos detalle-->
