--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -367,7 +367,7 @@
       </div>
 
       
-   <div *ngIf="bBandera" class="table-responsive">
+   <div *ngIf="bBandera" class="container">
     <br>
       <div class="form-row">
         <div class="form-group col-md-1">              
@@ -390,7 +390,7 @@
 
   
 
-   <div  class="contenedor-tabla" id="pdfTable" #pdfTable  > 
+   <div  class="container" id="pdfTable" #pdfTable  > 
 
     <!-- <div  class="contenedor-tabla"> -->
       <table class="table table-hover table-striped" datatable [dtOptions]="dtOptions"  >
