--- a/src/app/components/reporteventas/reporteventas.component.html
+++ b/src/app/components/reporteventas/reporteventas.component.html
@@ -81,7 +81,7 @@
                 </div>
   
                 <!-- General Form Elements -->
-                <form class="table-responsive">
+                <form class="">
 
                   <div class="form-row"> 
                     
@@ -242,7 +242,7 @@
 
                   <div class="form-row"> 
 
-                    <div class="form-group col-md-3 table-responsive"  >
+                    <div class="form-group col-md-3 "  >
                       <label class="CamposFonelli">Desde fecha 1er periodo</label>
                       <input 
                         type="date" 
@@ -268,7 +268,7 @@
                       >
                     </div>
 
-                    <div class="form-group col-md-3 table-responsive">
+                    <div class="form-group col-md-3 ">
                       <label class="CamposFonelli">Desde fecha 2do periodo</label>
                       <input 
                         type="date" 
