Se agrega datatable a consulta de pedidos

--- a/src/app/components/consultapedidos/consultapedidos.component.html
+++ b/src/app/components/consultapedidos/consultapedidos.component.html
@@ -167,7 +167,7 @@
           
 
       <div class="container" id="pdfTable" #pdfTable>
-          <table  class="table table-hover table-striped" >
+          <table  class="table table-hover table-striped" datatable [dtOptions]="dtOptions"  >
             <thead>
               <tr class="EncTabla">
               <th style="background-color: #24a4cc; color: white;" scope="col" >#</th>
