--- a/src/app/components/estadocuenta/estadocuenta.component.html
+++ b/src/app/components/estadocuenta/estadocuenta.component.html
@@ -1,24 +1,20 @@
 
-         <div class="container">
-          <p>
-            <button
-              type="button"
-              class="btnFonelliAzul btn"
-              (click)="collapse.toggle()"
-              [attr.aria-expanded]="!isCollapsed"
-              aria-controls="collapseExample"
-            >
-              Filtros
-            </button>
-          </p>
-        </div>
-      <section >
+<div class="container float-left">
+  <p>
+    <button
+      type="button"
+      class="btnFonelliAzul btn"
+      (click)="collapse.toggle()"
+      [attr.aria-expanded]="!isCollapsed"
+      aria-controls="collapseExample"
+    >
+      Filtros
+    </button>
+  </p>
+</div>      
+     
 
-        <div class="container float-left">
-        <div class="row">
-          <div class="col-12">
-
-            <div #collapse="ngbCollapse" class="container" [(ngbCollapse)]="isCollapsed">
+<div #collapse="ngbCollapse" class="container float-left" [(ngbCollapse)]="isCollapsed">
             <div class="card">
               <div class="card-body">
                 <h2 class="card-title" >Estado de cuenta</h2>
@@ -144,31 +140,29 @@
                 </form><!-- End General Form Elements --> 
               </div> 
             </div>
-</div>
+</div>      
 
-
-          </div>
-        </div>
-
-        <div *ngIf="bBandera" class="container">
+<div *ngIf="bBandera" class="container float-left">
           <br>
-          <div class="form-row">
-            <!-- <div class="form-group col-md-1">              
-              <label class="CamposFonelli">Búsqueda</label>
+          <div class="container">
+            <div class="form-row">
+              <!-- <div class="form-group col-md-1">              
+                <label class="CamposFonelli">Búsqueda</label>
+              </div>
+              <div class="form-group col-md-5">              
+                <input
+                    type="text"
+                    class="form-control"
+                    [(ngModel)]="searchtext"
+                    placeholder="Search"                 
+                  />
+                </div> -->
+                  <div class="form-group col-md-12">
+                    <button class="btnImprimir btn float-right" (click)="downloadAsPDF()" >      
+                      Imprimir PDF      
+                    </button> 
+                  </div> 
             </div>
-            <div class="form-group col-md-5">              
-              <input
-                  type="text"
-                  class="form-control"
-                  [(ngModel)]="searchtext"
-                  placeholder="Search"                 
-                />
-              </div> -->
-                <div class="form-group col-md-12">
-                  <button class="btnImprimir btn float-right" (click)="downloadAsPDF()" >      
-                    Imprimir PDF      
-                  </button> 
-                </div> 
           </div>
     
         <div class="container" id="pdfTable" #pdfTable>
@@ -193,7 +187,7 @@
             <tbody>
               <ng-container *ngFor="let cliente of oCliente | searchestadocuenta: searchtext">
                 <tr class="table-info">
-                  <td  class="FilasFonelli" colspan="13">{{'('+cliente.ClienteCodigo+' '+cliente.ClienteFilial+ ') ' +cliente.ClienteNombre+ '-' +cliente.Sucursal}}</td>
+                  <td  class="FilasFonelli" >{{'('+cliente.ClienteCodigo+' '+cliente.ClienteFilial+ ') ' +cliente.ClienteNombre+ '-' +cliente.Sucursal}}</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -301,10 +295,8 @@
       
          
         </div> 
-  </div> 
-</div>
-</section>
-  
+</div> 
+
   
 
     <!--Modal catalogo clientes-->
