--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -1,21 +1,26 @@
-
-  <div class="container">
-    <p>
-    <button type="button" class="btnFonelliAzul btn" (click)="collapse.toggle()" [attr.aria-expanded]="!isCollapsed"
-      aria-controls="collapseExample">
-    Filtros
+<div class="container float-left">
+  <p>
+    <button
+      type="button"
+      class="btnFonelliAzul btn"
+      (click)="collapse.toggle()"
+      [attr.aria-expanded]="!isCollapsed"
+      aria-controls="collapseExample"
+    >
+      Filtros
     </button>
   </p>
-  </div>
+</div>
 
-  <div #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
+
+  <div class="container float-left" #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
        <div class="card">
          <div class="card-body">
            <h2 class="card-title" >Relación de Pedidos</h2>
-
+  
            <!-- General Form Elements -->
            <form>
-
+  
               <div class="form-row" [hidden]="bCliente">
                   <div class="form-group col-md-3">
                     <label class="CamposFonelli">Desde oficina</label>
@@ -50,9 +55,9 @@
                       >CATALOGO DE CLIENTES</button>
                   </div>                     -->
               </div>
-
+  
               <div class="form-row">
-
+  
                 <div class="form-group col-md-3">   
                 
                   <label class="CamposFonelli">Desde cliente</label>                                    
@@ -67,9 +72,9 @@
                       disabled="{{ bCliente }}"
                       required>                          
                 </div>
-
+  
                  
-
+  
                 <div class="form-group col-md-3">
                   <label class="CamposFonelli">Filial</label>
                   <input
@@ -83,16 +88,16 @@
                     required
                   >
                 </div> 
-
+  
                 <div class="form-group col-md-3" [hidden]="bCliente"> 
                   <label class="CamposFonelli col-md-12" style="color:white;">-</label>
                   <button  type="button" class="btnFonelli btn" (click)="openClientes(Clientes,true)" style="background-color:#24a4cc;"><i class="bi bi-search"></i></button>
                 </div> 
-
+  
               </div> 
-
+  
              
-
+  
               <div class="form-row">
                   <div class="form-group col-md-3">
                     <label class="CamposFonelli">Hasta cliente</label>
@@ -120,15 +125,15 @@
                         required
                       >
                     </div>
-
+  
                     <div class="form-group col-md-3" [hidden]="bCliente"> 
                       <label class="CamposFonelli col-md-12" style="color:white;">-</label>
                       <button  type="button" class="btnFonelli btn" (click)="openClientes(Clientes,false)" style="background-color:#24a4cc;"><i class="bi bi-search"></i></button>
                     </div> 
-
+  
                     
                 </div>
-
+  
                 <div class="form-row">
                   <div class="form-group col-md-3">
                     <label class="CamposFonelli">Desde fecha pedido</label>
@@ -159,7 +164,7 @@
                     </div>
                   </div>                                     
               </div>
-
+  
               <div class="form-row">
                   <div class="form-group col-md-3">
                     <label class="CamposFonelli">Desde fecha cancelacion operacion</label>
@@ -191,8 +196,8 @@
                     </div>
                   </div>                                     
               </div>
-
-
+  
+  
               <div class="row">                     
                   <div class="form-group col-md-3">
                     <div class="form-check">
@@ -231,7 +236,7 @@
                       <label class="form-check-label CamposFonelli" > Todos </label>
                     </div>
                   </div>
-
+  
                   <div class="form-group col-md-3" [hidden]="bCliente">
                       <div class="form-check">
                         <input 
@@ -278,7 +283,7 @@
                         <label class="form-check-label CamposFonelli"> Todos </label>
                       </div>
                     </div>
-
+  
                     <div class="form-group col-md-3" [hidden]="bCliente">
                       <div class="form-check">
                         <input 
@@ -314,7 +319,7 @@
                         <label class="form-check-label CamposFonelli"> Todos </label>
                       </div>
                     </div>
-
+  
                     <div class="form-group col-md-3">
                       <div class="form-check">
                         <input 
@@ -346,7 +351,7 @@
                 <div *ngIf="sMensaje">
                   <p class="alert alert-danger" role="alert">{{sMensaje}}</p>
                 </div>
-
+  
                  
               <div class="form-row">
                   <div class="form-group col-md-6">
@@ -354,51 +359,44 @@
                   </div>
               </div> 
                           
-
-
+  
+  
             
-
+  
              
            </form><!-- End General Form Elements -->
-
+  
          </div>
        </div>
-
-      </div>
-
-      
-   <div *ngIf="bBandera" class="container">
-    <br>
-      <div class="form-row">
-        <div class="form-group col-md-1">              
-          <label class="CamposFonelli">Pedido:</label>
-        </div>
-        <div class="form-group col-md-5">              
-          <input
-              type="text"
-              class="form-control"
-              [(ngModel)]="searchtext"
-              placeholder="Search"                 
-            />
-          </div>
-            <div class="form-group col-md-6">
-              <button class="btnImprimir btn float-right" (click)="downloadAsPDF()" >      
-                Imprimir PDF      
-              </button> 
-            </div> 
-      </div>
-
   
-
-   <div  class="container" id="pdfTable" #pdfTable  > 
-
+      </div>
+  
+      
+   <div *ngIf="bBandera" class="container float-left">
+    <br>
+    <div class="container">
+      <div class="form-row">
+        
+        <div class="form-group col-md-12">
+          <button class="btnImprimir btn float-right" (click)="downloadAsPDF()" >      
+            Imprimir PDF      
+          </button> 
+        </div> 
+      </div>
+    </div>
+      
+  
+  
+  
+   <div   class="container" id="pdfTable" #pdfTable  > 
+  
     <!-- <div  class="contenedor-tabla"> -->
       <table class="table table-hover table-striped" datatable [dtOptions]="dtOptions"  >
         <!-- <table class="table table-hover table-striped "  style="position:sticky;" > -->
           <thead >
            <tr class="EncTabla" > 
             <!-- <tr class="EncTabla" > -->
-              <th style="background-color: #24a4cc; color: white;">PEDIDO</th><!--Pedido folio -->
+              <th style="background-color: #24a4cc; color: white; ">PEDIDO</th><!--Pedido folio -->
               <th *ngIf="!bCliente" style="background-color: #24a4cc; color: white;" >TP</th><!--Pedido codigo -->
               <th *ngIf="!bCliente" style="background-color: #24a4cc; color: white;">L</th><!-- Pedido letra -->              
               <th style="background-color: #24a4cc; color: white;">CLTE</th><!--Cliente codigo -->
@@ -426,7 +424,7 @@
             <ng-container *ngFor="let relPed of oRelacionPedRes.Contenido | searchrelacionpedidos: searchtext ">
               <tr class="table-info">
                 <!-- <td *ngIf="!bCliente" ? colspan="14" :colspan="18">{{relPed.OficinaFonelliNombre}}</td> -->
-                <td class="sticky" colspan="4">{{relPed.OficinaFonelliNombre}}</td> 
+                <td class="sticky" >{{relPed.OficinaFonelliNombre}}</td> 
                  <td></td> 
                 <td ></td> 
                 <td ></td>  
@@ -508,7 +506,7 @@
                   <td class="FilasFonBold" style="text-align:right;">{{tipoPed.TotalCantPedidaProd}}</td>
                   <td class="FilasFonBold" style="text-align:right;">{{tipoPed.TotalCantidadProd}}</td>
                   <td class="FilasFonBold" style="text-align:right;">{{tipoPed.TotalDifCantidadProd}}</td>
-
+  
                    <!-- <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalImportes(tipoPed.Pedidos))}}</td> -->
                    <!-- <td *ngIf="!bCliente" class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCPValorAgregado(tipoPed.Pedidos))}}</td>
                   <td class="FilasFonBold" style="text-align:right;">{{reemplaza(formatoMoneda(getTotalCanSurtida(tipoPed.Pedidos)),'$')}}</td>
@@ -576,7 +574,7 @@
             <td class="FilasFonBold" style="text-align:right;">{{oRelacionPedRes.TotalCantPedProdGranTotal}}</td>
             <td class="FilasFonBold" style="text-align:right;">{{oRelacionPedRes.TotalCantidadProdGranTotal}}</td>
             <td class="FilasFonBold" style="text-align:right;">{{oRelacionPedRes.TotalDifCantidadProdGranTotal}}</td>
-<!-- 
+  <!-- 
             <td class="FilasFonBold" style="text-align:right;">{{reemplaza(formatoMoneda(getTotalCanPedGranTotal(oRelacionPedRes.Contenido)),'$')}}</td>
             <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalImportesGranTotal(oRelacionPedRes.Contenido))}}</td>
             <td  *ngIf="!bCliente" class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCPValorAgregadoGranTotal(oRelacionPedRes.Contenido))}}</td>
@@ -595,39 +593,39 @@
         </table>
     
     <!-- </div> -->
-
+  
     
-
+  
     <!-- <div id="pdfTable" #pdfTable> -->
    
-
+  
   </div> 
-</div> 
-
-
-
-<!--Modal pedidos detalle-->
-
-<ng-template #PedidoDetalle let-modal >
-<div class="modal-header">
-
-<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
-</div>
-
-<div class="modal-body-tables">
-
+  </div> 
+  
+  
+  
+  <!--Modal pedidos detalle-->
+  
+  <ng-template #PedidoDetalle let-modal >
+  <div class="modal-header">
+  
+  <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  
+  <div class="modal-body-tables">
+  
   <div class="container">
       <div class="row">
-
+  
         <div >
           
           <label > Pedido: <strong>{{oBuscaDetalle.PedidoFolio}}</strong> </label>
         </div>
-
+  
         <div *ngIf="!bBanderaDet">
           <p class="alert alert-danger" role="alert">{{sMensajeModal}}</p>
         </div>
-
+  
             <div class="col-12">                     
               <table *ngIf="bBanderaDet"  class="table table-striped">
                 <thead>
@@ -717,7 +715,7 @@
                     <td class="FilasFonelli text-right">{{ pedDet.MedidaEspecial}}</td>
                     <td class="FilasFonelli text-right">{{ pedDet.CantidadMedidaEspecial}}</td>            
                   </tr>
-
+  
                   <tr>
                     <td></td>
                     <td></td>
@@ -746,29 +744,29 @@
       </div>
       
   </div>
-</div>
-
-
-
-<div class="modal-footer">
-<!-- <button type="submit" class="btn btn-primary" [disabled]="!formLoginDistribuidor.form.valid">INGRESAR</button> -->
-
-</div>
-
-</ng-template> 
-
-
-<!--Modal catalogo clientes-->
-<ng-template #Clientes let-modal >
-<div class="modal-header" >        
+  </div>
+  
+  
+  
+  <div class="modal-footer">
+  <!-- <button type="submit" class="btn btn-primary" [disabled]="!formLoginDistribuidor.form.valid">INGRESAR</button> -->
+  
+  </div>
+  
+  </ng-template> 
+  
+  
+  <!--Modal catalogo clientes-->
+  <ng-template #Clientes let-modal >
+  <div class="modal-header" >        
   <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
-</div>      
-
-<div class="modal-body-tables" style="overflow-y: scroll;" >
-
+  </div>      
+  
+  <div class="modal-body-tables" style="overflow-y: scroll;" >
+  
   <div class="container">
     <div class="row">
-
+  
       <div class="form-group col-md-1">              
         <br>
         <label class="CamposFonelli">Buscar:</label>
@@ -783,7 +781,7 @@
           />
       </div>
           
-
+  
       <div class="col-12" >                     
         <table  class="table table-striped">
           <thead>
@@ -821,13 +819,14 @@
     </div>
       
   </div>
-</div>
-
-
-<div class="modal-footer">
+  </div>
+  
+  
+  <div class="modal-footer">
   <!-- <button type="submit" class="btn btn-primary" [disabled]="!formLoginDistribuidor.form.valid">INGRESAR</button> -->
   
-</div>
-
-</ng-template> 
-
+  </div>
+  
+  </ng-template> 
+  
+  
