--- a/src/app/components/reporteventas/reporteventas.component.html
+++ b/src/app/components/reporteventas/reporteventas.component.html
@@ -842,7 +842,7 @@
         <br>
 
           <h2 class="card-title">Total General</h2> 
-        <table class="table table-hover table-striped " style="display:block;   overflow-x: auto;" [style.height.px]="sHeight">
+        <table class="table table-hover table-striped " [style.height.px]="sHeight">
             <thead>
 
               <tr class="EncTabla">                 
