Se hacen ajustes en reportes

--- a/src/app/components/consultainactivos/consultainactivos.component.html
+++ b/src/app/components/consultainactivos/consultainactivos.component.html
@@ -90,13 +90,27 @@
         <!-- <div class="container" >      -->
 
         <br>
-        <div class="row  ">
+        <!--<div class="row  ">
          
               <div class="form-group col-md-6">
                 <button class="btnImprimir btn float-right" (click)="downloadAsPDF()" >      
                   Imprimir PDF      
                 </button> 
               </div> 
+        </div>-->
+
+
+        <div class="form-row">
+          <div class="container">
+      
+            <div class="form-group col-md-12">
+              <button class="btnImprimir btn float-right" (click)="downloadAsPDF()" >      
+                Imprimir PDF      
+              </button> 
+            </div>
+      
+          </div>
+           
         </div>
 
     <div class="container"  id="pdfTable" #pdfTable>
