--- a/src/app/components/catalogointeractivo/catalogointeractivo.component.html
+++ b/src/app/components/catalogointeractivo/catalogointeractivo.component.html
@@ -1,1 +1,4 @@
-<iframe class="lazy lazy-loaded" width="100%" height="900px" src="http://35.165.224.218:81/" frameborder="0"></iframe>
+<!--<iframe class="lazy lazy-loaded" width="100%" height="900px" src="http://35.165.224.218:81/" frameborder="0"></iframe>-->
+
+<img src="../assets/images/principal/catalogo.png"  style="height: 600px; width: 600px;">
+    
