--- a/src/app/components/consultainactivos/consultainactivos.component.html
+++ b/src/app/components/consultainactivos/consultainactivos.component.html
@@ -114,7 +114,7 @@
         </div>
 
     <div class="container"  id="pdfTable" #pdfTable>
-        <table  class="row-border hover" datatable [dtOptions]="dtOptions" >
+        <table  class="row-border hover" >
           <thead>
             <tr class="EncTabla">                 
               <th class="table-warning" scope="col"></th>
