--- a/src/app/components/reporteventas/reporteventas.component.css
+++ b/src/app/components/reporteventas/reporteventas.component.css
@@ -1,4 +1,4 @@
-thead tr Th {
+/* thead tr Th {
     position: sticky;
     z-index: 12;
     top: 60px;
@@ -10,4 +10,4 @@ thead tr Th {
         z-index: 12;
         top: 300px;
         background: white;
-    }
+    } */
