--- a/src/app/components/reporteventas/reporteventas.component.html
+++ b/src/app/components/reporteventas/reporteventas.component.html
@@ -860,7 +860,7 @@
                 <td class="FilasFonBold table-warning" style="text-align: right;"></td>
                 <td class="FilasFonBold table-warning" style="text-align: right;">{{oReporteVentasRes.Contenido.TotalGeneralCategxValorAgregado1}}</td>
                 <td class="FilasFonBold table-warning" style="text-align: right;"></td>
-                <td class="FilasFonBold table-info" style="text-align: right;">{{oReporteVentasRes.Contenido.TotalGeneralCategxPiezas2
+                <td class="FilasFonBold table-info" style="text-align: right;">{{oReporteVentasRes.Contenido.TotalGeneralCategxPiezas2}}</td>
                 <td class="FilasFonBold table-info" style="text-align: right;">{{oReporteVentasRes.Contenido.TotalGeneralCategxGramos2}}</td>
                 <td class="FilasFonBold table-info" style="text-align: right;">{{oReporteVentasRes.Contenido.TotalGeneralCategxImporteVenta2}}</td>
                 <td class="FilasFonBold table-info" style="text-align: right;"></td>
