--- a/src/app/components/ventasarticulo/ventasarticulo.component.html
+++ b/src/app/components/ventasarticulo/ventasarticulo.component.html
@@ -423,11 +423,11 @@
           <tbody>
             <ng-container *ngFor="let venArt of oVentasArticuloRes.Contenido | searchventasclientearticulo: searchtext">
               <tr class="table-info">                    
-                <td class="FilasFonelli">{{'CATEGORIA'+' '+venArt.CategoriaCodigo + ': ' + venArt.CategoriaNombre }}</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td colspan="5" class="FilasFonelli">{{'CATEGORIA'+' '+venArt.CategoriaCodigo + ': ' + venArt.CategoriaNombre }}</td>
+                <td style="display: none"></td>
+                <td style="display: none"></td>
+                <td style="display: none"></td>
+                <td style="display: none"></td>
                 <td></td> 
                 <td></td>
                 <td></td>                 
