--- a/src/app/components/fichatecnica/fichatecnica.component.html
+++ b/src/app/components/fichatecnica/fichatecnica.component.html
@@ -351,7 +351,7 @@
         <tr>              
           <td></td>
           <td class="FilasFonelli"> Total Categoria</td>                
-          <td class="FilasFonBold" style="font-weight: bold;"> {{datos.TotalCatPiezasAnioAnt}}</td>
+          <td class="FilasFonBold" style="font-weight: bold;"> {{datos.TotalCatPiezasAnioAct}}</td>
           <td class="FilasFonBold" style="font-weight: bold;">{{ datos.TotalCatGramosAnioAct}}</td>
           <td class="FilasFonBold" style="text-align:right; font-weight: bold;">{{ datos.TotalCatImporteAnioAct}}</td>
           <td class="FilasFonBold" style="text-align:right; font-weight: bold;">{{ datos.TotalCatValorAgregadoAnioAct}}</td>
@@ -375,7 +375,7 @@
     <br>
   <br>
 
-  <label class="CamposFonelli">Resumen de Cartera</label>
+  <label class="CamposFonelli">Resumen de cartera</label>
   <table  class="table table-hover table-striped" >
     <thead>
       <tr class="EncTabla">            
