Atención a ISSUES 08-sep-2022
Atención a ISSUES reportados por ventas

--- a/src/app/components/fichatecnica/fichatecnica.component.html
+++ b/src/app/components/fichatecnica/fichatecnica.component.html
@@ -213,7 +213,7 @@
         <label>Limite de crédito</label>
       </div>
       <div class="col-md-6">
-        <label class="float-left">{{oFichaTecnicaRes.Contenido.LimiteCredito}}</label>
+        <label class="float-left">{{ formatoMoneda(oFichaTecnicaRes.Contenido.LimiteCredito) }}</label>
       </div>
       <div class="col-md-2">              
         <label class="float-left">TipoCte</label>
