--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -372,7 +372,7 @@
       </div>
   
       
-   <div *ngIf="bBandera" class="container float-left">
+   <div [hidden]="!bBandera" class="container float-left">
     <br>
     <div class="container">
       <div class="form-row">
@@ -391,7 +391,7 @@
    <div   class="container" id="pdfTable" #pdfTable  > 
   
     <!-- <div  class="contenedor-tabla"> -->
-      <table class="table table-hover table-striped" datatable [dtOptions]="dtOptions"  >
+      <table class="table table-hover table-striped" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"  >
         <!-- <table class="table table-hover table-striped "  style="position:sticky;" > -->
           <thead >
            <tr class="EncTabla" > 
