Se protegen cambios en reportes

--- a/src/app/components/estadocuenta/estadocuenta.component.html
+++ b/src/app/components/estadocuenta/estadocuenta.component.html
@@ -166,7 +166,7 @@
     
         <div class="container" id="pdfTable" #pdfTable>
           <table class="table table-hover table-striped  " datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"  >
-            <thead>
+            <thead class="thead-p">
               <tr class="EncTabla">
                 <th style="background-color: #24a4cc; color: white;">OF</th><!--Codigo oficina -->
                 <th style="background-color: #24a4cc; color: white;">C</th><!--Codigo tipo cartera -->
