--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -393,7 +393,7 @@
     <!-- <div  class="contenedor-tabla"> -->
       <table class="table table-hover table-striped" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"  >
         <!-- <table class="table table-hover table-striped "  style="position:sticky;" > -->
-          <thead >
+          <thead class="thead-p">
            <tr class="EncTabla" > 
             <!-- <tr class="EncTabla" > -->
               <th style="background-color: #24a4cc; color: white; ">PEDIDO</th><!--Pedido folio -->
