--- a/src/app/components/reporteventas/reporteventas.component.html
+++ b/src/app/components/reporteventas/reporteventas.component.html
@@ -511,7 +511,7 @@
         <div  class=""  id="pdfTable" #pdfTable>
          <div [hidden]="!bMuestraTablaA ">
           <table    class="table table-hover table-striped" id="firstTable" datatable [dtOptions]="dtOptions[0]" [dtTrigger]="dtTrigger1">             
-            <thead>
+            <thead class="thead-p">
               <tr class="EncTabla">                 
                 <th class="table-success" scope="col"></th>
                 <th class="table-success" scope="col"></th>
@@ -632,7 +632,7 @@
         </div>
         <div [hidden]="!bMuestraTablaB">
           <table class="table table-hover table-striped" id="secondTable" datatable [dtOptions]="dtOptions[1]"  [dtTrigger]="dtTrigger2">             
-              <thead>
+              <thead class="thead-p">
                 <tr class="EncTabla">                 
                   <th class="table-success" scope="col"></th>
                   <th class="table-success" scope="col"></th>
@@ -796,7 +796,7 @@
 
           <h2 class="card-title">Total General</h2> 
         <table class="table table-hover table-striped">
-            <thead>
+            <thead class="thead-p">
 
               <tr class="EncTabla">                 
                 <th class="table-success" scope="col"></th>
