--- a/src/app/components/consultapedidos/consultapedidos.component.css
+++ b/src/app/components/consultapedidos/consultapedidos.component.css
@@ -1,11 +1,11 @@
-thead tr:first-child Th {
+.thead-p tr:first-child Th {
     position: sticky;
     z-index: 12;
     top: 60px;
     /* background: white; */
     }
     
-    thead Th {
+    .thead-p Th {
         position: fixed;
         z-index: 12;
         top: 300px;
