--- a/src/app/components/consultapedidos/consultapedidos.component.html
+++ b/src/app/components/consultapedidos/consultapedidos.component.html
@@ -166,7 +166,7 @@
 
 <div class="container" id="pdfTable" #pdfTable>
           <table  class="table table-hover table-striped" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"  >
-            <thead>
+            <thead class="thead-p">
               <tr class="EncTabla">
               <th style="background-color: #24a4cc; color: white;" scope="col" >#</th>
               <th style="background-color: #24a4cc; color: white;" scope="col">L</th>
@@ -204,8 +204,8 @@
                 <td ></td>
                 <td ></td>                
                 <td class="FilasFonelli" style="text-align:left">Total General</td>
-                <td class="FilasFonelli" style="text-align:right">{{ oPedidoRes.Contenido.CantidadPedida}}</td>
-                <td class="FilasFonelli" style="text-align:right">{{ oPedidoRes.Contenido.CantidadPedida - oPedidoRes.Contenido.DiferenciaPedidosSurtido}}</td>
+                <td class="FilasFonelli" style="text-align:right">{{ oPedidoRes.Contenido.CantidadPedida}}</td> 
+                <td class="FilasFonelli" style="text-align:right">{{ oPedidoRes.Contenido.CantidadPedida - oPedidoRes.Contenido.DiferenciaPedidosSurtido}}</td> 
                 <td class="FilasFonelli" style="text-align:right">{{ oPedidoRes.Contenido.DiferenciaPedidosSurtido}}</td>
               </tr>
             </tbody>
@@ -415,107 +415,75 @@
     </div> -->
 </ng-template>
 
-<!--Modal catalogo clientes-->
-<ng-template #Clientes let-modal>
-<div class="modal-header">
-  <button
-    type="button"
-    class="btn-close"
-    aria-label="Close"
-    (click)="modal.dismiss('Cross click')"
-  ></button>
-</div>
-
-<div class="modal-body-tables" style="overflow-y: scroll">
-  <div class="container">
-    <div class="row">
-      <div class="form-group col-md-1">
-        <br />
-        <label class="CamposFonelli">Buscar:</label>
-      </div>
-      <div class="form-group col-md-5">
-        <br />
-        <input
-          type="text"
-          class="form-control"
-          [(ngModel)]="searchtext"
-          placeholder="Search"
-        />
-      </div>
-
-      <div class="col-12">
-        <table class="table table-striped">
-          <thead>
+  <!--Modal catalogo clientes-->
+  <ng-template #Clientes let-modal >
+    <div class="modal-header" >        
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+    </div>      
+    
+    <div class="modal-body-tables" style="overflow-y: scroll;" >
+    
+    <div class="container">
+      <div class="row">
+    
+        <div class="form-group col-md-1">              
+          <br>
+          <label class="CamposFonelli">Buscar:</label>
+        </div>
+        <div class="form-group col-md-5">    
+          <br>          
+          <input
+              type="text"
+              class="form-control"
+              [(ngModel)]="searchtext"
+              placeholder="Search"                 
+            />
+        </div>
+            
+    
+        <div class="col-12" >                     
+          <table  class="table table-striped">
+            <thead>
             <tr class="EncTabla">
               <th>#</th>
-              <th scope="col"></th>
-              <th scope="col">NUM</th>
-              <th scope="col">FIL</th>
-              <th scope="col">RAZÓN SOCIAL</th>
-              <th scope="col">SUCURSAL/NOMBRE</th>
-              <th scope="col">S</th>
-              <th scope="col">CONTACTO1</th>
-              <th scope="col">CONTACTO2</th>
+              <th scope="col" ></th>
+              <th scope="col" >NUM</th>                         
+              <th scope="col" >FIL</th>
+              <th scope="col" >RAZÓN SOCIAL</th>
+              <th scope="col" >SUCURSAL/NOMBRE</th>
+              <th scope="col" >S</th>
+              <th scope="col" >CONTACTO1</th>
+              <th scope="col" >CONTACTO2</th>                          
             </tr>
-          </thead>
-          <tbody>
-            <td
-              *ngIf="bCargandoClientes"
-              class="FilasFonelli"
-              style="text-align: center"
-              colspan="10"
-            >
-              <span
-                class="spinner-border spinner-border-sm"
-                role="status"
-                aria-hidden="true"
-                style="color: #183e6f"
-              >
-              </span>
-            </td>
-
-            <tr
-              *ngFor="
-                let emp of oCliente.Contenido
-                  | searchconsultaCliente: searchtext;
-                index as i
-              "
-              (click)="obtenCliente(emp.ClienteCodigo, emp.ClienteFilial)"
-            >
-              <th scope="row">{{ i + 1 }}</th>
-              <td>
-                <input style="border-color: #24a4cc" type="checkbox" />
-              </td>
-              <td class="FilasFonelli" style="text-align: left">
-                {{ emp.ClienteCodigo }}
-              </td>
-              <td class="FilasFonelli" style="text-align: left">
-                {{ emp.ClienteFilial }}
-              </td>
-              <td class="FilasFonelli" style="text-align: left">
-                {{ emp.RazonSocial }}
-              </td>
-              <td class="FilasFonelli" style="text-align: left">
-                {{ emp.DatosGenerales.Sucursal }}
-              </td>
-              <td class="FilasFonelli" style="text-align: left">
-                {{ emp.DatosGenerales.Status }}
-              </td>
-              <td class="FilasFonelli" style="text-align: left">
-                {{ emp.Contactos.Contacto1Nombre }}
-              </td>
-              <td class="FilasFonelli" style="text-align: left">
-                {{ emp.Contactos.Contacto2Nombre }}
-              </td>
-            </tr>
-          </tbody>
-        </table>
+            </thead>
+            <tbody>
+              <td *ngIf="bCargandoClientes" class="FilasFonelli" style="text-align:center" colspan="10"><span   class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="color:#183e6f"> </span></td>
+              <tr *ngFor="let emp of oCliente.Contenido |searchconsultaCliente: searchtext; index as i" (click)="obtenCliente(emp.ClienteCodigo,emp.ClienteFilial)">
+                <th scope="row">{{ i + 1 }}</th>
+                <td>                              
+                  <input  style="border-color: #24a4cc;" type="checkbox">
+                </td> 
+                <td class="FilasFonelli" style="text-align:left">{{emp.ClienteCodigo}}</td>                           
+                <td class="FilasFonelli" style="text-align:left">{{emp.ClienteFilial}}</td>                
+                <td class="FilasFonelli" style="text-align:left">{{emp.RazonSocial}}</td>
+                <td class="FilasFonelli" style="text-align:left">{{emp.DatosGenerales.Sucursal}}</td>
+                <td class="FilasFonelli" style="text-align:left">{{emp.DatosGenerales.Status}}</td>
+                <td class="FilasFonelli" style="text-align:left">{{emp.Contactos.Contacto1Nombre}}</td>
+                <td class="FilasFonelli" style="text-align:left">{{emp.Contactos.Contacto2Nombre}}</td>                                  
+              </tr>
+            </tbody>
+          </table>            
+          
+        </div>  
       </div>
+        
     </div>
-  </div>
-</div>
-
-<div class="modal-footer">
-  <!-- <button type="submit" class="btn btn-primary" [disabled]="!formLoginDistribuidor.form.valid">INGRESAR</button> -->
-</div>
-</ng-template>
+    </div>
+    
+    
+    <div class="modal-footer">
+    <!-- <button type="submit" class="btn btn-primary" [disabled]="!formLoginDistribuidor.form.valid">INGRESAR</button> -->
+    
+    </div>
+    
+    </ng-template> 
