--- a/src/app/components/reporteventas/reporteventas.component.css
+++ b/src/app/components/reporteventas/reporteventas.component.css
@@ -1,13 +1,13 @@
-/* thead tr Th {
+ .thead-p tr Th {
     position: sticky;
     z-index: 12;
     top: 60px;
-    background: white;
+    /* background: white; */
     }
     
-    thead Th {
+    .thead-p Th {
         position: fixed;
         z-index: 12;
         top: 300px;
-        background: white;
-    } */
+        /* background: white; */
+    } 
